--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,15 @@ body {
     align-items: center;
     /* height: 810px; */
     background-color: honeydew;
-    margin-top: 180px;
+    /* margin-top: 180px; */
+    margin: 15%;
 }
+
+@media(min-width: 200px) and (max-width: 785px) {
+    body {
+        margin: 50%;
+    }
+  }
 
 .container {
     width: 350px;
