--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0px;
-    padding: 0px;
+    /* margin: 0px;
+    padding: 0px; */
     text-align: center;
 }
 
@@ -8,17 +8,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* height: 810px; */
+
     background-color: honeydew;
-    /* margin-top: 180px; */
-    margin: 15%;
+
+    /* margin: 15%; */
 }
 
-@media(min-width: 200px) and (max-width: 785px) {
+/* @media(min-width: 200px) and (max-width: 785px) {
     body {
         margin: 50%;
     }
-  }
+  } */
 
 .container {
     width: 350px;
