--- a/css/style.css
+++ b/css/style.css
@@ -14,11 +14,18 @@ body {
     /* margin: 15%; */
 }
 
-/* @media(min-width: 200px) and (max-width: 785px) {
-    body {
-        margin: 50%;
+@media(min-width: 200px) and (max-width: 785px) {
+    .content{
+        
+        padding:100px 0px 50px 0px;
     }
-  } */
+    .container{
+        width: 250px !important;
+    }
+    button{
+        width: 210px !important;
+    }
+  }
 
   /* .testclass{
 display:block;
