--- a/css/style.css
+++ b/css/style.css
@@ -17,13 +17,13 @@ body {
 @media(min-width: 200px) and (max-width: 785px) {
     .content{
         
-        padding:100px 0px 50px 0px;
+        padding:100px 0px 50px 0px !important;
     }
     .container{
         width: 250px !important;
     }
     button{
-        width: 210px !important;
+        width: 190px !important;
     }
   }
 
